# csc122LAB_PowerWisdomAndCourage

./: CMakeLists.txt  main.cpp  triangle_number_test.cpp
classes/: TriangleNumberCalculator.cpp  TriangleNumberCalculator.hpp
